tests/paczka1/fuzzy1/40357048.err
Error in line 4: DoZG9KJn19 A245 45,1
Error in line 9: DoZG9KJn19 A831 5,6
Error in line 21: krxXhVm9 A8_1 _1,9
Error in line 27: krxXhVm9 A831 111,6
Error in line 33: kIACKe A245 70,6
